--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "author": "Jeremy Deutsch (https://github.com/jeremy-deutsch)",
   "license": "MIT",
   "main": "src/index.tsx",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@react-three/drei": "7.20.0",
     "@react-three/fiber": "7.0.1",
